# superstore-sales-analysis

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: generate_data.py
data/raw/: superstore_sales.csv
files/: 01_EDA.py  02_kpis_analysis.py  README.md  requirements.txt  utils.py
notebooks/: 01_EDA.py  02_kpis_analysis.py  03_discount_insights.py  04_advanced_insights.py
src/: utils.py
tests/: tests_utils.py
